Fixed image location

--- a/Article/tex/ch_1_introduction.tex
+++ b/Article/tex/ch_1_introduction.tex
@@ -5,8 +5,8 @@ Remote sensing data relevant to smart farming tends to be predominantly spatial 
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width = \textwidth]{Images/uav-s2-block.png}
-    \caption{Images of a field from week 24 of 2018 from (a) UAV and (b) Sentinel-2.}
+    \includegraphics[width = \textwidth]{images/uav-s2-block.png}
+    \caption{images of a field from week 24 of 2018 from (a) UAV and (b) Sentinel-2.}
     \label{fig:uav-s2-block}
 \end{figure}
 
