--- a/Article/tex/ch_4_crop_yield_prediction.tex
+++ b/Article/tex/ch_4_crop_yield_prediction.tex
@@ -69,7 +69,7 @@ The basic architecture of the implemented CNN model follows closely the one repo
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width = \textwidth]{Images/i-cnn.png}
+\includegraphics[width = \textwidth]{images/i-cnn.png}
 \caption{The overall topology of the implemented CNN (reproduced from [I]). }
 \label{fig:i-cnn}
 \end{figure}
@@ -90,14 +90,14 @@ The best performing model was also utilized in a case study of six fields contai
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width = \textwidth]{Images/ii-FigurePallette.png}
+    \includegraphics[width = \textwidth]{images/ii-FigurePallette.png}
     \caption{Visualisation of the true and predicted yield of a field (reproduced from [II]). Images of true and predicted yields in the top row share a similar scale. Bottom left image is scaled to predicted values only. Bottom right image depicts the error between true and predicted yield. Units are in kg/ha.}
     \label{fig:ii-FigurePallette}
 \end{figure}
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width = 0.6\textwidth]{Images/ii-MAPE_boxplots.png}
+    \includegraphics[width = 0.6\textwidth]{images/ii-MAPE_boxplots.png}
     \caption{Boxplots of percentage error between true yield and predicted yield for each field (reproduced from [II]).}
     \label{fig:ii-boxplots}
 \end{figure}
@@ -169,7 +169,7 @@ In-season prediction performance was evaluated with the best performing 3D-CNN m
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width = \textwidth]{Images/iv-true_pred.png}
+    \includegraphics[width = \textwidth]{images/iv-true_pred.png}
     \caption{Frame-based 3D-CNN model performances against true yield data (reproduced from [IV]).}
     \label{fig:iv-true-pred}
 \end{figure}
