Commented out publications

--- a/Article/main.tex
+++ b/Article/main.tex
@@ -219,10 +219,10 @@
 % them in the same order as in the list of
 % publications!
 
-\publication{article1}{publications/article-1.pdf}
-\publication{article2}{publications/article-2.pdf}
-\publication{article3}{publications/article-3.pdf}
-\publication{article4}{publications/article-4.pdf}
-\publication{article5}{publications/article-5.pdf}
+% \publication{article1}{publications/article-1.pdf}
+% \publication{article2}{publications/article-2.pdf}
+% \publication{article3}{publications/article-3.pdf}
+% \publication{article4}{publications/article-4.pdf}
+% \publication{article5}{publications/article-5.pdf}
 
 \end{document}
